--- a/action.yml
+++ b/action.yml
@@ -1,16 +1,13 @@
 name: "AI Code Review Action"
-description: "Perform code reviews and comment on diffs using OpenAI API."
+description: "Perform code reviews and comment on diffs using OLLAMA API."
 inputs:
   GITHUB_TOKEN:
     description: "GitHub token to interact with the repository."
     required: true
-  OPENAI_API_KEY:
-    description: "OpenAI API key for GPT."
-    required: true
-  OPENAI_API_MODEL:
-    description: "OpenAI API model."
+  API_MODEL:
+    description: "OLLAMA API model."
     required: false
-    default: "gpt-4"
+    default: "llama2:7b"
   exclude:
     description: "Glob patterns to exclude files from the diff analysis"
     required: false
