--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "open-ai-reviewer",
+  "name": "nagu-ai-reviewer",
   "version": "1.0.0",
-  "description": "Open AI powered code reviews",
+  "description": "Nagu AI powered code reviews",
   "main": "lib/main.js",
-  "author": "Ville Saukkonen",
+  "author": "Navaneeth N",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
@@ -15,6 +15,7 @@
     "@actions/core": "^1.10.0",
     "@octokit/rest": "^19.0.7",
     "minimatch": "^7.4.2",
+    "ollama": "^0.4.6",
     "openai": "^4.20.1",
     "parse-diff": "^0.11.1",
     "ts-node": "^10.9.1"
